<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailActivity"
    android:orientation="vertical"
    android:background="@color/pink">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/cv_user"
            app:cardCornerRadius="16dp"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:outlineSpotShadowColor="@color/black">

            <ImageView
                android:id="@+id/iv_user"
                android:layout_width="150dp"
                android:layout_height="150dp"
                tools:src="@tools:sample/avatars"
                android:contentDescription="@string/cd_iv_photo" />
        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/tv_full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/full_name"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/cv_user"
            app:layout_constraintStart_toStartOf="@+id/cv_user"
            app:layout_constraintTop_toBottomOf="@id/cv_user" />
        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/username"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_full_name"
            app:layout_constraintStart_toStartOf="@+id/tv_full_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_full_name" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/email"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_username"
            app:layout_constraintStart_toStartOf="@+id/tv_username"
            app:layout_constraintTop_toBottomOf="@+id/tv_username" />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:src="@drawable/baseline_favorite_border_24"
            app:tint="@color/red"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/button_favorite" />
        <LinearLayout
            android:id="@+id/ll_follow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="80dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_email"
            app:layout_constraintEnd_toEndOf="parent">
            <TextView
                android:id="@+id/tv_number_followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:textStyle="bold"
                android:text="@string/not_available"/>
            <TextView
                android:id="@+id/tv_followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/followers"
                android:layout_marginEnd="20dp"
                />
            <TextView
                android:id="@+id/tv_number_followings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/not_available"/>
            <TextView
                android:id="@+id/tv_followings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/followers" />

        </LinearLayout>
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/pink"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_follow"
            app:tabIndicatorAnimationMode="elastic"
            app:tabIndicatorFullWidth="false"
            app:tabIndicatorHeight="3dp"/>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabs" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>